// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Batch7 — provenance integrity & scope safety > 13114: 決定論 — 同一入力で同一結果 + スナップショット(回帰ガード) 1`] = `
{
  "outcomes": [
    {
      "applicabilityReason": "他の区市町村や国外から中野区に転入したすべての方に必要な届出です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "urgent",
      "procedureId": "procedure_resident_registration",
      "sourceIds": [
        "src-13114-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "マイナンバーカードをお持ちの方は、転入に伴う継続利用の手続きが必要です。",
      "applicable": "applicable",
      "dueDescription": "継続利用の届出期間は転入届出日から90日以内です。転入届自体を転出予定日から30日以内に行わなかった場合もカードは失効します。日曜日に転入・転居の手続きをした場合は、当日中に継続利用の手続きはできません。",
      "priority": "high",
      "procedureId": "procedure_mynumber_continued_use",
      "sourceIds": [
        "src-13114-my_number-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "職場の健康保険などに加入していない方は、中野区の国民健康保険への加入の届出が必要です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "high",
      "procedureId": "procedure_national_health_insurance",
      "sourceIds": [
        "src-13114-national_health_insurance-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "国民年金の被保険者の方に、引っ越しに伴う手続きの要否をお知らせします。中野区は『第1号被保険者は住民異動届のみで、そのほかの手続きは原則不要』と案内しています。",
      "applicable": "applicable",
      "dueDescription": "国内での引越しをしたときは、第1号被保険者の方は住民異動届(転入届)をお出しください。そのほかの手続きは原則必要ありません。第2号・第3号被保険者の方は、本人または配偶者の勤務先で手続きをしてください(区役所では取り扱えません)。日数固定の期限はこのページには記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_national_pension_address",
      "sourceIds": [
        "src-13114-national_pension-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "出生から高校生年代(18歳年度末まで)のお子さんを養育している保護者が対象です。中野区に転入した場合は認定請求が必要です。",
      "applicable": "applicable",
      "dueDescription": "前住所地での転出予定日の翌日から15日以内(土・日・祝含む)に認定請求をしてください。15日以内に請求すれば事由発生のあった日の翌月分から支給されます。起算日は前住所地での転出予定日のため、引越し日からは算定できません。",
      "priority": "high",
      "procedureId": "procedure_child_allowance",
      "sourceIds": [
        "src-13114-child_benefits-002",
        "src-13114-child_benefits-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "住民票が中野区にあり、国内の健康保険に加入している0歳〜18歳のお子さんを養育している保護者が対象です(所得制限はありません)。",
      "applicable": "applicable",
      "dueDescription": "区外からの転入により中野区発行の医療証を新規で申請します。申請期限(いつまでに申請すれば転入日にさかのぼって助成されるか)は中野区の公式ページに記載がないため要確認です。子ども総合窓口(電話 03-3228-3253)へお問い合わせください。",
      "priority": "high",
      "procedureId": "procedure_child_medical",
      "sourceIds": [
        "src-13114-child_medical-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "小・中学生(義務教育の学齢)のお子さまがいる世帯が中野区へ転入する場合に必要な、区立学校への転入学手続きです。中野区は住所異動届の際に『転入学通知書』を交付します。",
      "applicable": "applicable",
      "dueDescription": "住所の異動届(転入届)の手続きの際に『転入学通知書』を発行します。同通知書と、前居住地の学校から発行された『在学証明書』および『教科用図書給与証明書』を持って、指定された学校で手続きを行ってください。日数固定の期限はこのページには記載がありません。",
      "priority": "high",
      "procedureId": "procedure_school_transfer",
      "sourceIds": [
        "src-13114-school_transfer-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "保育を必要とする未就学のお子さまがいる世帯で、中野区の保育施設の利用を希望する方(区外から申し込む方)向けの案内です。",
      "applicable": "applicable",
      "dueDescription": "中野区へ転入予定の方は、申込書類の提出先が中野区役所保育入園係になります。入所希望月ごとの締切日17時までにご提出ください(電子申請・郵送・窓口)。入園が内定した場合は、入園月前月の最終営業日までに転入手続きと支給認定申請を行ってください(行わない場合は内定を取り消します)。締切日は入所希望月・年度により異なるため日数固定の期限は設定していません。",
      "priority": "normal",
      "procedureId": "procedure_childcare_application",
      "sourceIds": [
        "src-13114-childcare-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "犬のマイクロチップを環境省のサイトへ登録しているかが未確認のため、届出先(中野区の窓口 または 環境省の『犬と猫のマイクロチップ情報登録』サイト)が確定できません。登録状況をご確認ください(登録済みならマイクロチップの識別番号が鑑札とみなされ、環境省サイトでのオンライン手続きになります)。",
      "applicable": "needs_confirmation",
      "dueDate": "2026-08-31",
      "priority": "normal",
      "procedureId": "procedure_dog_registration_transfer",
      "sourceIds": [
        "src-13114-dog_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "転入したすべての方に、生活開始にあたってごみ・資源の分け方と収集曜日の確認をおすすめします。",
      "applicable": "applicable",
      "dueDescription": "生活開始まで(引越し後すぐに、お住まいの地域の収集曜日を確認してください)。中野区の収集曜日は地域ごとに決められており、中野区公式『ごみ収集・資源回収曜日一覧』の地域別ページでご確認ください。本サービスは収集曜日データを保持していません。",
      "priority": "normal",
      "procedureId": "procedure_waste_check",
      "sourceIds": [
        "src-13114-waste_guide-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "水道は住まいを移るすべての方に必要なライフラインの手続きです(区の手続きではなく東京都水道局への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "東京都水道局は「次のお手続きについては、3〜4日前までに必ずお手続きください」と案内しています(使用開始申込み・使用中止届のいずれも)。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_water_supply",
      "sourceIds": [
        "src-13000-water_supply-001",
        "src-13000-sewerage-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "旧住所あての郵便物等を新住所へ転送してもらうための、住所が変わるすべての方向けの手続きです(区の手続きではなく日本郵便への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "日本郵便は「転居届を提出されてから登録までに3〜7営業日を要しますので、転居される際には、お早めに転居届を提出してください」と案内しています。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。転送期間は届出日から1年間です(転送開始希望日からではありません)。",
      "priority": "normal",
      "procedureId": "procedure_postal_forwarding",
      "sourceIds": [
        "src-00000-postal_forwarding-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "電気・ガスは引越しに伴い契約先の民間事業者への手続きが必要になるライフラインです(区の手続きではありません)。",
      "applicable": "applicable",
      "dueDescription": "出典である国(デジタル庁)の公式ページには、電気・ガスの手続きの期限に関する記載がありません。受付の締切や必要な連絡時期は契約先の事業者ごとに異なるため、契約先へご確認ください(要確認)。",
      "priority": "normal",
      "procedureId": "procedure_utilities_contact",
      "sourceIds": [
        "src-00000-utilities_contact-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "車・バイク等の追加案内が必要と回答された方向けの、運転免許証の住所変更(記載事項変更)の手続きです(区の手続きではなく警視庁への手続きです)。",
      "applicable": "not_applicable",
      "dueDescription": "警視庁の当該ページには「◯日以内」という日数の期限の記載がありません(要確認)。転入届で住民票の住所が変わったあとに手続きしてください。",
      "priority": "normal",
      "procedureId": "procedure_driver_license_change",
      "sourceIds": [
        "src-13000-driver_license-001",
      ],
      "warnings": [],
    },
  ],
  "ruleVersion": "2026-08-07.1",
}
`;

exports[`Batch7 — provenance integrity & scope safety > 13116: 決定論 — 同一入力で同一結果 + スナップショット(回帰ガード) 1`] = `
{
  "outcomes": [
    {
      "applicabilityReason": "他の区市町村または国外から豊島区に転入したすべての方に必要な届出です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "urgent",
      "procedureId": "procedure_resident_registration",
      "sourceIds": [
        "src-13116-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "マイナンバーカードをお持ちの方は、転入に伴う継続利用の手続きが必要です。",
      "applicable": "applicable",
      "dueDescription": "手続きできる期間は転入手続きをした日から90日以内です。90日以内に継続利用手続きがされない場合、転入日から15日経過した転入届があった場合、転出予定日から30日経過した転入届があった場合は、マイナンバーカードが失効します。",
      "priority": "high",
      "procedureId": "procedure_mynumber_continued_use",
      "sourceIds": [
        "src-13116-my_number-001",
        "src-13116-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "他の健康保険に加入していない方は、豊島区の国民健康保険への加入の届出が必要です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "high",
      "procedureId": "procedure_national_health_insurance",
      "sourceIds": [
        "src-13116-national_health_insurance-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "国民年金の被保険者の方に、転入に伴う手続きの要否をお知らせします。豊島区は『第1号被保険者は住民票の住所変更の届け出をすれば国民年金の届け出は不要』と案内しています。",
      "applicable": "applicable",
      "dueDescription": "他自治体から転入した20歳以上60歳未満の方のうち、第1号被保険者(自営業、学生など)の方は、住民票の住所変更の届け出をしていただければ国民年金の届け出は必要ありません。第2号・第3号被保険者の方は勤務先を通して届け出をしてください。海外からの転入等で公的年金制度に未加入の方は、高齢者医療年金課(区役所3階10番窓口・平日のみ)での手続きが必要です。日数固定の期限はこのページには記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_national_pension_address",
      "sourceIds": [
        "src-13116-national_pension-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "高校生年代までのお子様を養育している方が対象です。豊島区に転入した場合は申請が必要です。",
      "applicable": "applicable",
      "dueDescription": "原則として申請した月の翌月分から支給されます。月末などに転入した場合は、前住所の転出予定日の翌日から起算して15日以内(閉庁日を含めて数えます)に申請すれば、転出予定日の翌月分から支給されます。15日目が土曜日・日曜日・祝日にあたる場合は直後の開庁日を15日目とします。起算日は前住所地での転出予定日のため、引越し日からは算定できません。",
      "priority": "high",
      "procedureId": "procedure_child_allowance",
      "sourceIds": [
        "src-13116-child_benefits-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "高校生相当年齢まで(18歳に達した日以降の最初の3月31日まで)の児童を養育している方が対象です(保護者の所得制限はありません)。",
      "applicable": "applicable",
      "dueDescription": "医療費の助成は原則として医療証交付の申請日(郵送の場合は到着日)から開始です。ただし、転入日の翌日から2か月以内に申請した場合は、転入日までさかのぼって助成されます。",
      "priority": "high",
      "procedureId": "procedure_child_medical",
      "sourceIds": [
        "src-13116-child_medical-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "小・中学生(義務教育の学齢)のお子さまがいる世帯が豊島区へ転入する場合に必要な、区立学校への転入学手続きです。豊島区で交付される書類の名称は公式ページに記載がないため設定していません(他区の名称を持ち込みません)。",
      "applicable": "applicable",
      "dueDescription": "住民票の転入後、学務課学事グループで転入学・編入学の手続きをしてください。その後、指定された学校で面談を実施します。その際、転入前の学校より発行される在学証明書・教科書給与証明書を持参してください(海外からの転入の場合は不要)。日数固定の期限はこのページには記載がありません。",
      "priority": "high",
      "procedureId": "procedure_school_transfer",
      "sourceIds": [
        "src-13116-school_transfer-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "保育を必要とする未就学のお子さまがいる世帯で、豊島区の認可保育施設の利用を希望する方(区外から申し込む方)向けの案内です。",
      "applicable": "applicable",
      "dueDescription": "豊島区への転入予定がある方の受付窓口は豊島区保育課入園グループです。入園月の前月末までに、保護者とお子さんの住民登録の異動・引っ越しと、保育課入園グループでの手続きを終える必要があります。入園月の前月末までに転入手続き・保育課での手続き・面接・健康診断が終了しない場合は内定取消となります。締切日は入園希望月・年度により異なるため日数固定の期限は設定していません。",
      "priority": "normal",
      "procedureId": "procedure_childcare_application",
      "sourceIds": [
        "src-13116-childcare-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "犬のマイクロチップの装着・環境省登録サイトへの登録状況が未確認のため、届出先(豊島区保健所窓口 または 環境省のマイクロチップ登録サイト)が確定できません。登録状況をご確認ください(登録済みならマイクロチップが鑑札とみなされ、保健所への来所は不要です)。",
      "applicable": "needs_confirmation",
      "dueDescription": "マイクロチップ未装着の場合は、前住所地で発行された『鑑札』を持参して豊島区保健所窓口(生活衛生課管理・事業グループ4番窓口)へお越しください。マイクロチップが装着され環境省の登録サイトに登録されている場合はマイクロチップ登録サイトで手続きし、保健所への来所は不要です。明確な日数の期限はこのページには記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_dog_registration_transfer",
      "sourceIds": [
        "src-13116-dog_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "転入したすべての方に、生活開始にあたってごみ・資源の分け方と収集日の確認をおすすめします。",
      "applicable": "applicable",
      "dueDescription": "生活開始まで(引越し後すぐに、お住まいの地域の収集日と利用できる集積所を確認してください)。ごみや資源は決められた曜日の朝8時までに決められた集積所に出してください(池袋駅周辺の繁華街地域は朝7時30分まで)。ごみ・資源を出せる集積所は各世帯1か所だけのため、大家さんや不動産屋さんに必ず確認してください。本サービスは収集曜日データを保持していません。",
      "priority": "normal",
      "procedureId": "procedure_waste_check",
      "sourceIds": [
        "src-13116-waste_guide-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "水道は住まいを移るすべての方に必要なライフラインの手続きです(区の手続きではなく東京都水道局への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "東京都水道局は「次のお手続きについては、3〜4日前までに必ずお手続きください」と案内しています(使用開始申込み・使用中止届のいずれも)。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_water_supply",
      "sourceIds": [
        "src-13000-water_supply-001",
        "src-13000-sewerage-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "旧住所あての郵便物等を新住所へ転送してもらうための、住所が変わるすべての方向けの手続きです(区の手続きではなく日本郵便への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "日本郵便は「転居届を提出されてから登録までに3〜7営業日を要しますので、転居される際には、お早めに転居届を提出してください」と案内しています。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。転送期間は届出日から1年間です(転送開始希望日からではありません)。",
      "priority": "normal",
      "procedureId": "procedure_postal_forwarding",
      "sourceIds": [
        "src-00000-postal_forwarding-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "電気・ガスは引越しに伴い契約先の民間事業者への手続きが必要になるライフラインです(区の手続きではありません)。",
      "applicable": "applicable",
      "dueDescription": "出典である国(デジタル庁)の公式ページには、電気・ガスの手続きの期限に関する記載がありません。受付の締切や必要な連絡時期は契約先の事業者ごとに異なるため、契約先へご確認ください(要確認)。",
      "priority": "normal",
      "procedureId": "procedure_utilities_contact",
      "sourceIds": [
        "src-00000-utilities_contact-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "車・バイク等の追加案内が必要と回答された方向けの、運転免許証の住所変更(記載事項変更)の手続きです(区の手続きではなく警視庁への手続きです)。",
      "applicable": "not_applicable",
      "dueDescription": "警視庁の当該ページには「◯日以内」という日数の期限の記載がありません(要確認)。転入届で住民票の住所が変わったあとに手続きしてください。",
      "priority": "normal",
      "procedureId": "procedure_driver_license_change",
      "sourceIds": [
        "src-13000-driver_license-001",
      ],
      "warnings": [],
    },
  ],
  "ruleVersion": "2026-08-07.1",
}
`;

exports[`Batch7 — provenance integrity & scope safety > 13117: 決定論 — 同一入力で同一結果 + スナップショット(回帰ガード) 1`] = `
{
  "outcomes": [
    {
      "applicabilityReason": "北区外の区市町村または国外から北区に転入したすべての方に必要な届出です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "urgent",
      "procedureId": "procedure_resident_registration",
      "sourceIds": [
        "src-13117-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "マイナンバーカードをお持ちの方は、転入に伴う住所変更(継続利用・券面事項変更)の手続きが必要です。継続利用の期限は北区公式ページで確認できていないため未確認として扱います。",
      "applicable": "applicable",
      "dueDescription": "お引越し日から14日以内に転入・転居の手続きが必要です。手続きを行わないとマイナンバーカードが失効してしまう場合があります。継続利用の手続きそのものの期限は、北区の公式ページでは確認できませんでした(未確認)。期限は王子・赤羽・滝野川の各区民事務所へご確認ください。",
      "priority": "high",
      "procedureId": "procedure_mynumber_continued_use",
      "sourceIds": [
        "src-13117-my_number-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "勤務先等の健康保険・後期高齢者医療制度に加入しておらず、生活保護を受けていない方は、北区の国民健康保険への加入の届出が必要です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "high",
      "procedureId": "procedure_national_health_insurance",
      "sourceIds": [
        "src-13117-national_health_insurance-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "国民年金(第1号被保険者)の加入・種別変更等の届出に関する案内です。国内からの転入に伴う届出の要否は北区公式ページに記載がないため、窓口または年金事務所へご確認ください。",
      "applicable": "applicable",
      "dueDescription": "北区の『国民年金の届出をするとき』ページには、国内からの転入に伴う住所変更の届出の要否および日数の期限の記載がありません。国民年金1号加入中に海外から転入された方は、転入の手続き後に国民年金係までお越しください。届出の要否は北区国民年金係(電話 03-3908-1139)または北年金事務所へご確認ください。",
      "priority": "normal",
      "procedureId": "procedure_national_pension_address",
      "sourceIds": [
        "src-13117-national_pension-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "北区内にお住まいで、高校生年代(18歳に達した最初の3月31日)までの児童の父母のうち主に生計を維持されている方が対象です。北区は15日特例の起算日を『事由発生日(出生日・転入日等)の翌日』と転入日基準で明記しているため、引越し日から期限を算定できます。",
      "applicable": "applicable",
      "dueDate": "2026-08-16",
      "priority": "high",
      "procedureId": "procedure_child_allowance",
      "sourceIds": [
        "src-13117-child_benefits-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "北区に住民登録があり、健康保険に加入しているお子さんを養育している方が対象です。転入したときは医療証の交付申請が必要です。",
      "applicable": "applicable",
      "dueDescription": "出生・転入などの事実が発生した日から3カ月以内の申請であれば、出生・転入日にさかのぼって助成資格を得ることができます。それ以降に申請したときは、原則、医療証交付申請を受け付けた日が資格日となります。",
      "priority": "high",
      "procedureId": "procedure_child_medical",
      "sourceIds": [
        "src-13117-child_medical-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "小・中学生(義務教育の学齢)のお子さまがいる世帯が北区へ転入する場合に必要な、区立学校への転校手続きです。北区が交付する書類の名称は『就学通知書』です(他区の名称は持ち込みません)。",
      "applicable": "applicable",
      "dueDescription": "前籍校で転退学届を提出して教科書給与証明書・在学証明書等を受け取り、指定校へ事前連絡のうえ訪問日時を調整してください。区民事務所で転入の手続きをすると指定校の記載された『就学通知書』が発行されますので、前籍校の書類とあわせて指定校へご提出ください。日数固定の期限はこのページには記載がありません。",
      "priority": "high",
      "procedureId": "procedure_school_transfer",
      "sourceIds": [
        "src-13117-school_transfer-001",
        "src-13117-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "保育を必要とする未就学のお子さまがいる世帯で、北区の保育園の利用を希望する方(区外から申し込む方)向けの案内です。",
      "applicable": "applicable",
      "dueDescription": "北区に転入予定の方は、北区の『保育園 保育利用案内』を参照のうえ申請の手続きをしてください。北区に転入予定のない方の申請には制限があり、『受託制限について』で申請の可否を確認のうえ、入園相談係(電話 03-3908-9129)へお問い合わせください。申込締切日は入園希望月・年度により異なるため日数固定の期限は設定していません。",
      "priority": "normal",
      "procedureId": "procedure_childcare_application",
      "sourceIds": [
        "src-13117-childcare-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "犬のマイクロチップの装着・環境省Webサイトへの情報登録の状況が未確認のため、届出先(北区の窓口 または 環境省Webサイト『犬と猫のマイクロチップ情報登録』)が確定できません。登録状況をご確認ください(登録済みなら区窓口での申請は不要です)。",
      "applicable": "needs_confirmation",
      "dueDescription": "転入したときは飼い犬の登録事項変更の手続きが必要です。マイクロチップを装着していない、もしくは環境省Webサイトで情報登録をしていない場合は、前住所地の鑑札をお持ちのうえ窓口(区民事務所でも可)で手続きしてください。明確な日数の期限はこのページには記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_dog_registration_transfer",
      "sourceIds": [
        "src-13117-dog_registration-001",
        "src-13117-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "転入したすべての方に、生活開始にあたってごみ・資源の分け方と収集曜日の確認をおすすめします。",
      "applicable": "applicable",
      "dueDescription": "生活開始まで(引越し後すぐに、お住まいの地域の収集曜日を確認してください)。ごみは収集日の朝8時までに、ごみ集積所(各戸収集地域は玄関前)へお出しください。各地域の収集曜日は北区公式『家庭ごみ・資源の分け方出し方』のPDF(令和8年度版)の2面をご覧ください。本サービスは収集曜日データを保持していません。",
      "priority": "normal",
      "procedureId": "procedure_waste_check",
      "sourceIds": [
        "src-13117-waste_guide-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "水道は住まいを移るすべての方に必要なライフラインの手続きです(区の手続きではなく東京都水道局への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "東京都水道局は「次のお手続きについては、3〜4日前までに必ずお手続きください」と案内しています(使用開始申込み・使用中止届のいずれも)。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_water_supply",
      "sourceIds": [
        "src-13000-water_supply-001",
        "src-13000-sewerage-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "旧住所あての郵便物等を新住所へ転送してもらうための、住所が変わるすべての方向けの手続きです(区の手続きではなく日本郵便への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "日本郵便は「転居届を提出されてから登録までに3〜7営業日を要しますので、転居される際には、お早めに転居届を提出してください」と案内しています。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。転送期間は届出日から1年間です(転送開始希望日からではありません)。",
      "priority": "normal",
      "procedureId": "procedure_postal_forwarding",
      "sourceIds": [
        "src-00000-postal_forwarding-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "電気・ガスは引越しに伴い契約先の民間事業者への手続きが必要になるライフラインです(区の手続きではありません)。",
      "applicable": "applicable",
      "dueDescription": "出典である国(デジタル庁)の公式ページには、電気・ガスの手続きの期限に関する記載がありません。受付の締切や必要な連絡時期は契約先の事業者ごとに異なるため、契約先へご確認ください(要確認)。",
      "priority": "normal",
      "procedureId": "procedure_utilities_contact",
      "sourceIds": [
        "src-00000-utilities_contact-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "車・バイク等の追加案内が必要と回答された方向けの、運転免許証の住所変更(記載事項変更)の手続きです(区の手続きではなく警視庁への手続きです)。",
      "applicable": "not_applicable",
      "dueDescription": "警視庁の当該ページには「◯日以内」という日数の期限の記載がありません(要確認)。転入届で住民票の住所が変わったあとに手続きしてください。",
      "priority": "normal",
      "procedureId": "procedure_driver_license_change",
      "sourceIds": [
        "src-13000-driver_license-001",
      ],
      "warnings": [],
    },
  ],
  "ruleVersion": "2026-08-07.1",
}
`;

exports[`Batch7 — provenance integrity & scope safety > 13118: 決定論 — 同一入力で同一結果 + スナップショット(回帰ガード) 1`] = `
{
  "outcomes": [
    {
      "applicabilityReason": "他の区市町村または外国から荒川区に転入したすべての方に必要な届出です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "urgent",
      "procedureId": "procedure_resident_registration",
      "sourceIds": [
        "src-13118-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "マイナンバーカードをお持ちの方は、転入に伴う継続利用の手続きが必要です。",
      "applicable": "applicable",
      "dueDescription": "届出期間は転入届を行ってから90日以内です(ただし、転出予定日から30日以内、かつ転入から14日以内に転入届を行った場合に限ります)。いずれかの期間を過ぎるとマイナンバーカードの継続利用はできません。",
      "priority": "high",
      "procedureId": "procedure_mynumber_continued_use",
      "sourceIds": [
        "src-13118-my_number-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "職場の健康保険などに加入していない方は、荒川区の国民健康保険への加入の届出が必要です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "high",
      "procedureId": "procedure_national_health_insurance",
      "sourceIds": [
        "src-13118-national_health_insurance-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "国民年金(第1号被保険者)の加入・種別変更等の届出に関する案内です。転入に伴う届出の要否は荒川区公式ページに記載がないため、窓口または年金事務所へご確認ください。",
      "applicable": "applicable",
      "dueDescription": "荒川区の『国民年金の届出』ページには、荒川区への転入に伴う住所変更の届出の要否および日数の期限の記載がありません。転入に伴う届出が必要かどうかは、荒川区役所 国保年金課国民年金係(電話 03-3802-4168)または荒川年金事務所へご確認ください。",
      "priority": "normal",
      "procedureId": "procedure_national_pension_address",
      "sourceIds": [
        "src-13118-national_pension-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "高校生年代までの児童を養育している世帯が対象です。荒川区に転入した場合は新たに申請が必要です。",
      "applicable": "applicable",
      "dueDescription": "申請した月の翌月分から支給されるため、前住所地の転出予定日の同月内に申請してください。転出予定日が月の後半の場合は、その翌日から数えて15日以内(15日目が区役所閉庁日の場合はその翌開庁日)に申請すれば同月内に申請した取扱いになります。起算日は前住所地での転出予定日のため、引越し日からは算定できません。",
      "priority": "high",
      "procedureId": "procedure_child_allowance",
      "sourceIds": [
        "src-13118-child_benefits-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "荒川区に住民登録があり、国民健康保険または社会保険に加入している、18歳に達する日以後の最初の3月31日までの子どもを養育している方が対象です(所得制限はありません)。",
      "applicable": "applicable",
      "dueDescription": "出生・転入などの事実が発生した日から3カ月以内の申請であれば、出生・転入日にさかのぼって助成資格が得られます。それ以降の申請の場合は申請日が資格取得日となります。",
      "priority": "high",
      "procedureId": "procedure_child_medical",
      "sourceIds": [
        "src-13118-child_medical-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "小・中学生(義務教育の学齢)のお子さまがいる世帯が荒川区へ転入する場合に必要な、区立学校への転入学手続きです。荒川区で交付される書類の名称は公式ページに記載がないため設定していません(他区の名称を持ち込みません)。",
      "applicable": "applicable",
      "dueDescription": "おおむね転校1か月前を目途に、電子申請の『転入学予定者の連絡フォーム』で事前連絡をしてください。前籍校で転学書類を受け取り、荒川区で転入手続きをしたうえで入学申込みの申請フォーム(郵送・来庁も可)で申し込み、入学校での面談を経て登校開始日を決定します。日数固定の期限はこのページには記載がありません。",
      "priority": "high",
      "procedureId": "procedure_school_transfer",
      "sourceIds": [
        "src-13118-school_transfer-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "保育を必要とする未就学のお子さまがいる世帯で、荒川区の認可保育園の利用を希望する方(区外から申し込む方)向けの案内です。",
      "applicable": "applicable",
      "dueDescription": "荒川区へ転入予定の方は、お住まいの自治体を経由せず荒川区へ直接お申し込みください(仮申込み)。住民票を移す前に申し込めるのは、入園する月の初日までに荒川区内に住民票を移すことができ、住所を移すことが証明できる書類のコピーを提出できる方です。入園する月の初日までに転入手続きをし、完了後に荒川区保育課入園相談係へ電話でご連絡ください。締切日は入園希望月・年度により異なるため日数固定の期限は設定していません。",
      "priority": "normal",
      "procedureId": "procedure_childcare_application",
      "sourceIds": [
        "src-13118-childcare-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "犬のマイクロチップの装着・環境省データベースへの登録状況が未確認のため、届出先(荒川区保健所 または 環境省の『犬と猫のマイクロチップ情報登録』サイト)が確定できません。登録状況をご確認ください(環境省のデータベースに登録済みなら荒川区保健所での手続きは不要です)。",
      "applicable": "needs_confirmation",
      "dueDescription": "『飼い犬の登録事項変更届』と鑑札を持参して荒川区保健所生活衛生課管理係(荒川区役所北庁舎1階1番窓口)へご提出ください。各区民事務所ではこの手続きはできません。明確な日数の期限はこのページには記載がありません。鑑札を持参している場合は荒川区の鑑札と無償交換します(紛失時は再交付手数料1,600円)。",
      "priority": "normal",
      "procedureId": "procedure_dog_registration_transfer",
      "sourceIds": [
        "src-13118-dog_registration-002",
        "src-13118-dog_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "転入したすべての方に、生活開始にあたってごみ・資源の分け方と収集日の確認をおすすめします。",
      "applicable": "applicable",
      "dueDescription": "生活開始まで(引越し後すぐに、お住まいの地域の収集日を確認してください)。ごみ・プラスチックは決められた収集・回収日の当日朝8時までに出してください。地域別の収集日と令和8年度のカレンダーは荒川区公式『ごみ収集日・プラスチック回収日』ページでご確認ください。本サービスは収集曜日データを保持していません。",
      "priority": "normal",
      "procedureId": "procedure_waste_check",
      "sourceIds": [
        "src-13118-waste_guide-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "水道は住まいを移るすべての方に必要なライフラインの手続きです(区の手続きではなく東京都水道局への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "東京都水道局は「次のお手続きについては、3〜4日前までに必ずお手続きください」と案内しています(使用開始申込み・使用中止届のいずれも)。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_water_supply",
      "sourceIds": [
        "src-13000-water_supply-001",
        "src-13000-sewerage-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "旧住所あての郵便物等を新住所へ転送してもらうための、住所が変わるすべての方向けの手続きです(区の手続きではなく日本郵便への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "日本郵便は「転居届を提出されてから登録までに3〜7営業日を要しますので、転居される際には、お早めに転居届を提出してください」と案内しています。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。転送期間は届出日から1年間です(転送開始希望日からではありません)。",
      "priority": "normal",
      "procedureId": "procedure_postal_forwarding",
      "sourceIds": [
        "src-00000-postal_forwarding-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "電気・ガスは引越しに伴い契約先の民間事業者への手続きが必要になるライフラインです(区の手続きではありません)。",
      "applicable": "applicable",
      "dueDescription": "出典である国(デジタル庁)の公式ページには、電気・ガスの手続きの期限に関する記載がありません。受付の締切や必要な連絡時期は契約先の事業者ごとに異なるため、契約先へご確認ください(要確認)。",
      "priority": "normal",
      "procedureId": "procedure_utilities_contact",
      "sourceIds": [
        "src-00000-utilities_contact-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "車・バイク等の追加案内が必要と回答された方向けの、運転免許証の住所変更(記載事項変更)の手続きです(区の手続きではなく警視庁への手続きです)。",
      "applicable": "not_applicable",
      "dueDescription": "警視庁の当該ページには「◯日以内」という日数の期限の記載がありません(要確認)。転入届で住民票の住所が変わったあとに手続きしてください。",
      "priority": "normal",
      "procedureId": "procedure_driver_license_change",
      "sourceIds": [
        "src-13000-driver_license-001",
      ],
      "warnings": [],
    },
  ],
  "ruleVersion": "2026-08-07.1",
}
`;
